tests/baselines/reference/propertyAccessOfReadonlyIndexSignature.errors.txt
propertyAccessOfReadonlyIndexSignature.ts(6,1): error TS2542: Index signature in type 'Test' only permits reading.


==== propertyAccessOfReadonlyIndexSignature.ts (1 errors) ====
    interface Test {
        readonly [key: string]: string;
    }
    
    declare var a: Test;
    a.foo = 'baz';
    ~~~~~
!!! error TS2542: Index signature in type 'Test' only permits reading.
    